the change of my conclusion with its bib file.

--- a/Conclusion/ref.bib
+++ b/Conclusion/ref.bib
@@ -71,3 +71,422 @@
   year={2011},
   publisher={Springer}
 }
+
+@article{gologlu2019proofconjecture,
+  title = {Proofs of several conjectures on linear codes from Boolean functions},
+  journal = {Discrete Mathematics},
+  volume = {342},
+  number = {2},
+  pages = {572-583},
+  year = {2019},
+  issn = {0012-365X},
+  doi = {https://doi.org/10.1016/j.disc.2018.10.022},
+  url = {https://www.sciencedirect.com/science/article/pii/S0012365X1830356X},
+  author = {Faruk Göloğlu and Dáša Krasnayová},
+  abstract = {Ding (2016) introduced a generic construction of linear codes over Fp from a subset of Fpm. Many combinatorially interesting sets give rise to codes with good parameters under this generic construction. Ding also provided a set of interesting conjectures related to the properties of several sets arising from vectorial Boolean functions and their corresponding linear codes under this construction. In this paper we prove four of these conjectures (Conjectures 38-41).}
+}
+
+@ARTICLE{dobbertin2006niho_dickson_kloosterman,
+  author={Dobbertin, H. and Felke, P. and Helleseth, T. and Rosendahl, P.},
+  journal={IEEE Transactions on Information Theory}, 
+  title={Niho type cross-correlation functions via dickson polynomials and Kloosterman sums}, 
+  year={2006},
+  volume={52},
+  number={2},
+  pages={613-627},
+  doi={10.1109/TIT.2005.862094}
+}
+
+
+@article{Browning2010sixbitAPN,
+  title={An APN permutation in dimension six},
+  author={Browning, KA and Dillon, JF and McQuistan, MT and Wolfe, AJ},
+  journal={Finite Fields: theory and applications},
+  volume={518},
+  pages={33--42},
+  year={2010}
+}
+
+@article{Yoshiara2012EAeqCCZ_quadAPN,
+  title={Equivalences of quadratic APN functions},
+  author={Yoshiara, Satoshi},
+  journal={Journal of Algebraic Combinatorics},
+  volume={35},
+  pages={461--475},
+  year={2012},
+  publisher={Springer US}
+}
+
+@article{Gold1968goldfunction_APN_sequences,
+  author    = {Robert Gold},
+  title     = {Maximal recursive sequences with 3-valued recursive cross-correlation
+               functions (Corresp.)},
+  journal   = {{IEEE} Trans. Inf. Theory},
+  volume    = {14},
+  number    = {1},
+  pages     = {154--156},
+  year      = {1968},
+  url       = {https://doi.org/10.1109/TIT.1968.1054106},
+  doi       = {10.1109/TIT.1968.1054106},
+  timestamp = {Fri, 25 Dec 2020 01:11:36 +0100},
+  biburl    = {https://dblp.org/rec/journals/tit/Gold68.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Kasami1971kasamifunction_APN_sequences,
+  author    = {Tadao Kasami},
+  title     = {The Weight Enumerators for Several Clauses of Subcodes of the 2nd
+               Order Binary Reed-Muller Codes},
+  journal   = {Inf. Control.},
+  volume    = {18},
+  number    = {4},
+  pages     = {369--394},
+  year      = {1971},
+  url       = {https://doi.org/10.1016/S0019-9958(71)90473-6},
+  doi       = {10.1016/S0019-9958(71)90473-6},
+  timestamp = {Mon, 18 May 2020 17:45:04 +0200},
+  biburl    = {https://dblp.org/rec/journals/iandc/Kasami71.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Dobbertin1999Welchfunction_APN_sequences,
+  author    = {Hans Dobbertin},
+  title     = {Almost Perfect Nonlinear Power Functions on GF(2\({}^{\mbox{n}}\)):
+               The Welch Case},
+  journal   = {{IEEE} Trans. Inf. Theory},
+  volume    = {45},
+  number    = {4},
+  pages     = {1271--1275},
+  year      = {1999},
+  url       = {https://doi.org/10.1109/18.761283},
+  doi       = {10.1109/18.761283},
+  timestamp = {Tue, 10 Mar 2020 10:46:16 +0100},
+  biburl    = {https://dblp.org/rec/journals/tit/Dobbertin99.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Dobbertin1999Nihofunction_APN_sequences,
+  author    = {Hans Dobbertin},
+  title     = {Almost Perfect Nonlinear Power Functions on GF(2n): The Niho Case},
+  journal   = {Inf. Comput.},
+  volume    = {151},
+  number    = {1-2},
+  pages     = {57--72},
+  year      = {1999},
+  url       = {https://doi.org/10.1006/inco.1998.2764},
+  doi       = {10.1006/inco.1998.2764},
+  timestamp = {Fri, 12 Feb 2021 22:16:04 +0100},
+  biburl    = {https://dblp.org/rec/journals/iandc/Dobbertin99.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{Nyberg1993differential_and_inversefunction,
+  author    = {Kaisa Nyberg},
+  editor    = {Tor Helleseth},
+  title     = {Differentially Uniform Mappings for Cryptography},
+  booktitle = {Advances in Cryptology - {EUROCRYPT} '93, Workshop on the Theory and
+               Application of of Cryptographic Techniques, Lofthus, Norway, May 23-27,
+               1993, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {765},
+  pages     = {55--64},
+  publisher = {Springer},
+  year      = {1993},
+  url       = {https://doi.org/10.1007/3-540-48285-7\_6},
+  doi       = {10.1007/3-540-48285-7\_6},
+  timestamp = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl    = {https://dblp.org/rec/conf/eurocrypt/Nyberg93.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@InProceedings{Dobbertin2001dobbbertinAPN,
+  author="Dobbertin, Hans",
+  editor="Jungnickel, Dieter
+  and Niederreiter, Harald",
+  title="Almost Perfect Nonlinear Power Functions on GF(2n): A New Case for n Divisible by 5",
+  booktitle="Finite Fields and Applications",
+  year="2001",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="113--121",
+  abstract="We prove that for d = 24s+ 23s+ 22s+ 2s-1 the power function xdis almost perfect nonlinear (APN) on L = GF(25s), i.e. for each a ∈ L the equation (x + 1)d+ xd= a has either no or precisely two solutions in L. The proof of this result is based on a new ``multi-variate'' technique which was recently introduced by the author in order to confirm the conjectured APN property of Welch and Niho power functions.",
+  isbn="978-3-642-56755-1"
+}
+
+@article{BudaghyanC2008tri_hexanomialAPN,
+  author    = {Lilya Budaghyan and
+               Claude Carlet},
+  title     = {Classes of Quadratic {APN} Trinomials and Hexanomials and Related
+               Structures},
+  journal   = {{IEEE} Trans. Inf. Theory},
+  volume    = {54},
+  number    = {5},
+  pages     = {2354--2357},
+  year      = {2008},
+  url       = {https://doi.org/10.1109/TIT.2008.920246},
+  doi       = {10.1109/TIT.2008.920246},
+  timestamp = {Tue, 10 Mar 2020 10:44:58 +0100},
+  biburl    = {https://dblp.org/rec/journals/tit/BudaghyanC08.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{BudaghyanCL2009newAPN_fromknownone,
+  author    = {Lilya Budaghyan and
+               Claude Carlet and
+               Gregor Leander},
+  title     = {Constructing new {APN} functions from known ones},
+  journal   = {Finite Fields Their Appl.},
+  volume    = {15},
+  number    = {2},
+  pages     = {150--159},
+  year      = {2009},
+  url       = {https://doi.org/10.1016/j.ffa.2008.10.001},
+  doi       = {10.1016/j.ffa.2008.10.001},
+  timestamp = {Fri, 12 Feb 2021 22:19:47 +0100},
+  biburl    = {https://dblp.org/rec/journals/ffa/BudaghyanCL09.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@INPROCEEDINGS{BudaghyanCL2009newquadAPN,
+  author={Budaghyan, Lilya and Carlet, Claude and Leander, Gregor},
+  booktitle={2009 IEEE Information Theory Workshop}, 
+  title={On a construction of quadratic APN functions}, 
+  year={2009},
+  volume={},
+  number={},
+  pages={374-378},
+  doi={10.1109/ITW.2009.5351383}
+}
+
+@article{BrackenBMM2011quadAPN,
+  author    = {Carl Bracken and
+               Eimear Byrne and
+               Nadya Markin and
+               Gary McGuire},
+  title     = {A few more quadratic {APN} functions},
+  journal   = {Cryptogr. Commun.},
+  volume    = {3},
+  number    = {1},
+  pages     = {43--53},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/s12095-010-0038-7},
+  doi       = {10.1007/s12095-010-0038-7},
+  timestamp = {Sat, 25 Apr 2020 14:00:49 +0200},
+  biburl    = {https://dblp.org/rec/journals/ccds/BrackenBMM11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{BudaghyanCCCV2020APN_isotopicshifts,
+  author    = {Lilya Budaghyan and
+               Marco Calderini and
+               Claude Carlet and
+               Robert S. Coulter and
+               Irene Villa},
+  title     = {Constructing {APN} Functions Through Isotopic Shifts},
+  journal   = {{IEEE} Trans. Inf. Theory},
+  volume    = {66},
+  number    = {8},
+  pages     = {5299--5309},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TIT.2020.2974471},
+  doi       = {10.1109/TIT.2020.2974471},
+  timestamp = {Fri, 31 Jul 2020 17:06:46 +0200},
+  biburl    = {https://dblp.org/rec/journals/tit/BudaghyanCCCV20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{BudaghyanHK2020quadrinomialAPN,
+  author    = {Lilya Budaghyan and
+               Tor Helleseth and
+               Nikolay S. Kaleyski},
+  title     = {A New Family of {APN} Quadrinomials},
+  journal   = {{IEEE} Trans. Inf. Theory},
+  volume    = {66},
+  number    = {11},
+  pages     = {7081--7087},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TIT.2020.3007513},
+  doi       = {10.1109/TIT.2020.3007513},
+  timestamp = {Thu, 17 Dec 2020 18:28:36 +0100},
+  biburl    = {https://dblp.org/rec/journals/tit/BudaghyanHK20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@ARTICLE{Zheng2022newAPN_trace,
+  author={Zheng, Lijing and Kan, Haibin and Li, Yanjun and Peng, Jie and Tang, Deng},
+  journal={IEEE Transactions on Information Theory}, 
+  title={Constructing New APN Functions Through Relative Trace Functions}, 
+  year={2022},
+  volume={68},
+  number={11},
+  pages={7528-7537},
+  doi={10.1109/TIT.2022.3186899}}
+
+@article{ZhouP2012semifieldsAPN,
+  title = {A new family of semifields with 2 parameters},
+  journal = {Advances in Mathematics},
+  volume = {234},
+  pages = {43-60},
+  year = {2013},
+  issn = {0001-8708},
+  doi = {https://doi.org/10.1016/j.aim.2012.10.014},
+  url = {https://www.sciencedirect.com/science/article/pii/S0001870812004057},
+  author = {Yue Zhou and Alexander Pott},
+  keywords = {Commutative semifield, Isotopism, Planar function, Projective plane},
+  abstract = {A new family of commutative semifields with two parameters is presented. Its left and middle nucleus are both determined. Furthermore, we prove that for different pairs of parameters, these semifields are not isotopic. It is also shown that, for some special parameters, one semifield in this family can lead to two inequivalent planar functions. Finally, using a similar construction, new APN functions are given.}
+}
+
+@article{Taniguchi2019quadraticAPN,
+  author = {Taniguchi, Hiroaki},
+  title = {On Some Quadratic APN Functions},
+  year = {2019},
+  issue_date = {Sep 2019},
+  publisher = {Kluwer Academic Publishers},
+  address = {USA},
+  volume = {87},
+  number = {9},
+  issn = {0925-1022},
+  url = {https://doi.org/10.1007/s10623-018-00598-2},
+  doi = {10.1007/s10623-018-00598-2},
+  abstract = {A construction of APN functions using the bent function $$B(x,y)=xy$$ is proposed in Carlet (Des Codes Cryptogr 59:89-109, 2011). At this time, two families of APN functions using this construction are known, that is, the family of Carlet (2011) and the family of Zhou and Pott (Adv Math 234:43-60, 2013). In this note, we propose another family of APN functions with this construction, which are not CCZ equivalent to the former two families on $${{mathbb {F}}}_{2^8}$$. We also propose a family of presemifields and determined the middle, left, right nuclei and the center of the associated semifields.},
+  journal = {Des. Codes Cryptography},
+  month = {sep},
+  pages = {1973-1983},
+  numpages = {11},
+  keywords = {APN function, Semifield, Projective polynomial}
+}
+
+@article{CalderiniBC2020APN_ABfunction,
+  author    = {Marco Calderini and
+               Lilya Budaghyan and
+               Claude Carlet},
+  title     = {On known constructions of {APN} and {AB} functions and their relation
+               to each other},
+  journal   = {{IACR} Cryptol. ePrint Arch.},
+  pages     = {1444},
+  year      = {2020},
+  url       = {https://eprint.iacr.org/2020/1444},
+  timestamp = {Wed, 02 Dec 2020 16:59:34 +0100},
+  biburl    = {https://dblp.org/rec/journals/iacr/CalderiniBC20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{Gologlu2020APN_biprojective,
+  author={Göloğlu, Faruk},
+  journal={IEEE Transactions on Information Theory}, 
+  title={Biprojective Almost Perfect Nonlinear Functions}, 
+  year={2022},
+  volume={68},
+  number={7},
+  pages={4750-4760},
+  doi={10.1109/TIT.2022.3157798}
+}
+
+@ARTICLE{LiZLQ2022quadraticAPN,
+  author={Li, Kangquan and Zhou, Yue and Li, Chunlei and Qu, Longjiang},
+  journal={IEEE Transactions on Information Theory}, 
+  title={Two New Families of Quadratic APN Functions}, 
+  year={2022},
+  volume={68},
+  number={7},
+  pages={4761-4769},
+  doi={10.1109/TIT.2022.3157810}}
+
+@article{CalderiniLV2022twobivariateAPN,
+  title={Two new families of bivariate APN functions},
+  author={Calderini, Marco and Li, Kangquan and Villa, Irene},
+  journal={arXiv preprint arXiv:2204.07462},
+  year={2022}
+}
+
+@article{GolougluK2021biprojectiveAPN,
+  title={Equivalences of biprojective almost perfect nonlinear functions},
+  author={G{\"o}lo{\u{g}}lu, Faruk and K{\"o}lsch, Lukas},
+  journal={arXiv preprint arXiv:2111.04197},
+  year={2021}
+}
+
+@article{Beierle2022search_quadAPN,
+  author    = {Christof Beierle and
+               Gregor Leander},
+  title     = {New Instances of Quadratic {APN} Functions},
+  journal   = {{IEEE} Trans. Inf. Theory},
+  volume    = {68},
+  number    = {1},
+  pages     = {670--678},
+  year      = {2022},
+  url       = {https://doi.org/10.1109/TIT.2021.3120698},
+  doi       = {10.1109/TIT.2021.3120698},
+  timestamp = {Sat, 08 Jan 2022 02:22:42 +0100},
+  biburl    = {https://dblp.org/rec/journals/tit/BeierleL22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Li2022trivariateAPN,
+  author    = {Kangquan Li and
+               Nikolay S. Kaleyski},
+  title     = {Two new infinite families of {APN} functions in triviariate form},
+  journal   = {{IACR} Cryptol. ePrint Arch.},
+  pages     = {1522},
+  year      = {2022},
+  url       = {https://eprint.iacr.org/2022/1522},
+  timestamp = {Wed, 23 Nov 2022 17:31:07 +0100},
+  biburl    = {https://dblp.org/rec/journals/iacr/LiK22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Yu2022search_quadAPN,
+  author    = {Yuyin Yu and
+               L{\'{e}}o Perrin},
+  title     = {Constructing more quadratic {APN} functions with the {QAM} method},
+  journal   = {Cryptogr. Commun.},
+  volume    = {14},
+  number    = {6},
+  pages     = {1359--1369},
+  year      = {2022},
+  url       = {https://doi.org/10.1007/s12095-022-00598-z},
+  doi       = {10.1007/s12095-022-00598-z},
+  timestamp = {Tue, 06 Dec 2022 13:15:05 +0100},
+  biburl    = {https://dblp.org/rec/journals/ccds/YuP22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{Carlet2008lowbound_NL_profile,
+  author={Carlet, Claude},
+  journal={IEEE Transactions on Information Theory}, 
+  title={Recursive Lower Bounds on the Nonlinearity Profile of Boolean Functions and Their Applications}, 
+  year={2008},
+  volume={54},
+  number={3},
+  pages={1262-1272},
+  doi={10.1109/TIT.2007.915704}}
+
+@article{BerlekampRS1967roots_quad_tri,
+title = {On the solution of algebraic equations over finite fields},
+journal = {Information and Control},
+volume = {10},
+number = {6},
+pages = {553-564},
+year = {1967},
+issn = {0019-9958},
+doi = {https://doi.org/10.1016/S0019-9958(67)91016-9},
+url = {https://www.sciencedirect.com/science/article/pii/S0019995867910169},
+author = {E.R. Berlekamp and H. Rumsey and G. Solomon},
+abstract = {This article gives new fast methods for decoding certain error-correcting codes by solving certain algebraic equations. As described by Peterson (1961), the locations of a Bose-Chaudhuri Hocquenghem code over a field of characteristic p are associated with the elements of an extension field, GF(pk). The code is designed in such a way that the weighted power-sum symmetric functions of the error locations can be obtained directly by computing appropriately chosen parity checks on the received word. Good methods for computing the elementary symmetric functions from the weighted power-sum symmetric functions have been presented by Berlekamp (1967). The elementary symmetric functions, σ1, σ2, …, σt are the coefficients of an algebraic equation whose roots are the error locations xt+σ1xt-1+σ2xt-1+⋯+σt=0 Previous methods for finding the roots of this equation have searched all of the elements in GF(pk) (Chien, 1964) or looked up the answer in a large table (Polkinghorn, 1966). We present here improved procedures for extracting the roots of algebraic equations of small degrees.}
+}
+
+@article{BeierleCLP2022ninebitAPNpermutation_error,
+title = {A further study of quadratic APN permutations in dimension nine},
+journal = {Finite Fields and Their Applications},
+volume = {81},
+pages = {102049},
+year = {2022},
+issn = {1071-5797},
+doi = {https://doi.org/10.1016/j.ffa.2022.102049},
+url = {https://www.sciencedirect.com/science/article/pii/S1071579722000582},
+author = {Christof Beierle and Claude Carlet and Gregor Leander and Léo Perrin},
+keywords = {APN permutations, Infinite family, CCZ-equivalence, EA-equivalence, Boolean functions},
+abstract = {Recently, Beierle and Leander found two new sporadic quadratic APN permutations in dimension 9. Up to EA-equivalence, we present a single trivariate representation of those two permutations as Cu:(F2m)3→(F2m)3,(x,y,z)↦(x3+uy2z,y3+uxz2,z3+ux2y), where m=3 and u∈F23∖{0,1} such that the two permutations correspond to different choices of u. We then analyze the differential uniformity and the nonlinearity of Cu in a more general case. For m≥3 being a multiple of 3 and u∈F2m not being a 7-th power, we show that the differential uniformity of Cu is bounded above by 8, and that the linearity of Cu is bounded above by 81+⌊m2⌋. Based on numerical experiments, we conjecture that Cu is not APN if m is greater than 3. We also analyze the CCZ-equivalence classes of the quadratic APN permutations in dimension 9 known so far and derive a lower bound on the number of their EA-equivalence classes. We further show that the two sporadic APN permutations share an interesting similarity with Gold APN permutations in odd dimension divisible by 3, namely that a permutation EA-inequivalent to those sporadic APN permutations and their inverses can be obtained by just applying EA transformations and inversion to the original permutations.}
+}
