--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -9,7 +9,8 @@
 \usepackage[colorlinks=true]{hyperref}
 \usepackage{enumitem,empheq}
 \usepackage{booktabs}
-\usepackage{tabularx}
+\usepackage{rotating,tabularx}
+\usepackage{graphicx}
 \usepackage{siunitx}
 \usepackage{pifont}
 % \newtheorem{theorem}{Theorem}
@@ -60,8 +61,22 @@
 \end{proof}
 
 
+\section{Finite Field}
+    \textbf{Hilbert 90} We have $ \tr(x)=0 $ for $ x\in\F_{2^k} $ iff there exist some $ y\in\F_{2^k} $ with 
+    $ x=y^2+y $.
 
-McEliece's book\cite{mceliece2012finite}: 
+    \textbf{Theorem}\cite{BerlekampRS1967roots_quad_tri} 
+    The cubic equation $ x^3+x+a=0 $, $ a\in\F_{2^k}^* $ has a unique solution iff $ \tr(a^{-1})\ne\tr(1) $. 
+    
+    \textbf{Theorem}\cite{BerlekampRS1967roots_quad_tri} 
+    A necessary and suffcient condition that all three roots of the cubic equation $ x^3+x+a=0 $ lie in 
+    $ \F_{2^k} $ is that $ P_k(a)=0 $ where the polynomials $ P_k(x) $ may be defined recursively by the equations
+    \begin{align*}
+        &P_1(x)=P_2(x)=x\\
+        &P_k(x)=P_{k-1}(x)+x^{2^{k-3}}P_{k-2}(x).
+    \end{align*}
+
+\section{McEliece's book\cite{mceliece2012finite}}
     \begin{lemma}
         For $ 1\leq e\leq m $,
         \begin{empheq}[left={\gcd (2^e+1,2^m-1)=\empheqlbrace}]{align*}
@@ -71,14 +86,14 @@ McEliece's book\cite{mceliece2012finite}:
     \end{lemma}
     \noindent\rule{\linewidth}{0.4pt}
 
-    AES硬件加速的实现方法：
+\section{AES硬件加速的实现方法}
     下面给出 $ A=a_0 Y+a_1 Y^{16}\in\F_{2^8} $的取逆操作，其中$a_0,a_1\in\F_{2^4} $:
     \begin{enumerate}
         \item 设$ (W,W^2) $是$ \F_{2^2} $ 的基，$(Z^2,Z^8) $ 是 $ \F_{2^4} $ 的基，$ (Y,Y^{16} ) $是 $ \F_{2^8} $的基。
-        \item 计算A的逆元素的方法是： $A^{−1}=(AA^{16} )^{−1}A^{16}=((a_0+a_1 )^2 WZ+a_0 a_1 )^{−1}(a_1 Y+a_0 Y^{16}) $
+        \item 计算A的逆元素的方法是: $A^{-1}=(AA^{16} )^{-1}A^{16}=((a_0+a_1 )^2 WZ+a_0 a_1 )^{-1}(a_1 Y+a_0 Y^{16}) $
     \end{enumerate}
 
-    算法思想：这里需要计算的有 $ T_1=(a_0+a_1);T_2=(WZ) (T_1 )^2;T_3=a_0 a_1;T_4=T_2+T_3;T_5=(T_4 )^{−1};T_6=T_5 a_1;T_7=T_5 a_0 $. 所有的操作都是在 $\F_{2^4} $上，所以等同于对长度为 $4$ 的向量进行操作。
+    算法思想：这里需要计算的有 $ T_1=(a_0+a_1);T_2=(WZ) (T_1 )^2;T_3=a_0 a_1;T_4=T_2+T_3;T_5=(T_4 )^{-1};T_6=T_5 a_1;T_7=T_5 a_0 $. 所有的操作都是在 $\F_{2^4} $上，所以等同于对长度为 $4$ 的向量进行操作。
     \begin{enumerate}
         \item $T_1$和$T_4$是向量加法；
         \item $T_2$是标量乘法，使用变换矩阵$P=\begin{bmatrix}
@@ -108,7 +123,7 @@ McEliece's book\cite{mceliece2012finite}:
         z_2&=(x_0 +x_3)(y_0+y_3) +(x_0+x_2)(y_0+y_2) +(x_0 +x_1)(y_0+y_1) +(x_1 +x_2)(y_1 +y_2) +x_2 y_2\\
         z_3&=(x_1 +x_3)(y_1+y_3) +(x_0+x_2)(y_0+y_2) +(x_2 +x_3)(y_2+y_3) +x_3 y_3
     \end{empheq}
-        取逆操作$ y=(y_0,y_1,y_2,y_3 )=x^{−1}= (x_0,x_1,x_2,x_3 )^{−1}$ 结果如下(直观上看着是$8$次乘法)：
+        取逆操作$ y=(y_0,y_1,y_2,y_3 )=x^{-1}= (x_0,x_1,x_2,x_3 )^{-1}$ 结果如下(直观上看着是$8$次乘法)：
     \begin{empheq}[left=\empheqlbrace]{align*}
         -y_0&=x_1 x_2 x_3+x_0 x_2+x_1 x_2+x_2+x_3\\
         -y_1&=x_0 x_2 x_3+x_0 x_2+x_1 x_2+x_1 x_3+x_3\\
@@ -181,7 +196,7 @@ McEliece's book\cite{mceliece2012finite}:
 % [7 7]
     \begin{enumerate}
         \item EA-equivalent functions are CCZ-equivalent
-        \item if a function $F$ is a permutation then $F$ is CCZ-equivalent to $F^{−1}$\cite{carlet1998codes}
+        \item if a function $F$ is a permutation then $F$ is CCZ-equivalent to $F^{-1}$\cite{carlet1998codes}
         \item CCZ-equivalence coincides with\begin{enumerate}
             \item EA-equivalence for planar functions [36, 38];
             \item linear equivalence for DO planar functions [36, 38];
@@ -338,38 +353,217 @@ McEliece's book\cite{mceliece2012finite}:
     }
     \end{remark}
 
-apn functions:
-\begin{enumerate}
-    \item $ x^3+\omega x^{36} $, $ \omega\in \{u\F_{2^5}^*\}\cup\{u^2\F_{2^5}^*\} $ where $ u\in\F_{2^5}^* $ of order $ 3 $ in theorem 2 of \cite{edel2006newapn}
-    \item Let $s$ and $k$ be positive integers with $\gcd(s, 3k) = 1$ and let $t \in\{1, 2\}$, $i = 3 − t$. Let further $a = 2s + 1$ and $b = 2^{ik} + 2^{tk+s}$ and let $\omega = \alpha^{2k}−1$ for a primitive element $\alpha \in\F_{2^{3k}}^* $. If $\gcd(2^{3k}−1, (b−a)/(2^k−1)) \ne \gcd(2^k−1, (b−a)/(2^k−1))$,
-    the function $F : \F_{2^{3k}}\rightarrow \F_{2^{3k}}, x \mapsto x^a + \omega x^b$ is APN in theorem 1 of 
-    \cite{Budaghyan2008twobinomialapn}.
-    \item Let $s$ and $k$ be positive integers such that $s \leq 4 k-1$, $\gcd(k, 2)=\gcd(s, 2 k)=1$, and $i=s k \bmod 4, t=4-i$. Let further $a=2^{s}+1$ and $b=2^{i k}+2^{t k+s}$ and let $\omega=$ $\alpha^{2^{k}-1}$ for a primitive element $\alpha \in \mathbb{F}_{2^{4 k}}^{*}$. Then, the function $F: \mathbb{F}_{2^{4 k}} \rightarrow \mathbb{F}_{2^{4 k}}, x \mapsto x^{a}+\omega x^{b}$ is APN in theorem 2 of 
-    \cite{Budaghyan2008twobinomialapn}.
-    \item Let $k$ and $s$ be odd integers with $\gcd(k, s) = 1$. Let $ b\in\F_{2^{2k}} $ which is not a cube, 
-    $ c\in\F_{2^{2k}}\setminus\F_{2^k} $ and $ r_i\in\F_{2^k} $ for all $ i\in\{1,...,k-1\} $, then the function
-    $ F:\F_{2^{2k}}\rightarrow\F_{2^{2k}},x\mapsto bx^{2^s+1}+b^{2^k}x^{2^{k+s}+x^k+cx^{2^k+1}+\sum_{i=1}^{k-1}r_ix^{2^{i+k}+2^i}} $ is APN in Theorem 1 of \cite{Bracken2008apn}
-    \item Let $k$ and $s$ be positive integers such that $k+s=0 \bmod 3$ and $\gcd(s, 3 k)=\gcd(3, k)=1$. Let further $u \in \mathbb{F}_{2^{3 k}}^{*}$ be primitive and let $v, w \in \mathbb{F}_{2^{k}}$ with $v w \neq 1$. Then, the function
-    $$
-    \begin{aligned}
-    &F: \mathbb{F}_{2^{3 k}} \rightarrow \mathbb{F}_{2^{3 k}} \\
-    &x \mapsto u x^{2^{s}+1}+u^{2^{k}} x^{2^{2 k}+2^{k+s}}+v x^{2^{2 k}+1}+w u^{2^{k}+1} x^{2^{k+s}+2^{s}}
-    \end{aligned}
-    $$
-    is APN in Theorem 2.1 of \cite{bracken2011afewapn}
-    \item 
-\end{enumerate}
+\section{APN functions}
+    Until now, only a single instance of an APN permutation in even dimension is known, namely for $ n = 6 $\cite{Browning2010sixbitAPN}: 
+    \[K:\F_{2^6}\rightarrow\F_{2^6},\quad x\mapsto x^3+x^{10}+gx^{24},\]
+    where $ g $ is an element in $ \F_{2^6}^* $ with minimal polynomial $ X^6+X^4+X^3 + X + 1\in \F_2[X] $. 
 
+    We know that two quadratic APN functions are CCZ-equivalent if and only if they are EA-equivalent\cite{Yoshiara2012EAeqCCZ_quadAPN}.
 
+    \begin{table}[!t]
+        \caption{All Known APN monomials over $\F_{2^n}$} \label{APN monomials}
+        \centering
+        \small
+        \begin{tabular}{c c cc }	
+            \toprule
+            Family   &	Function                       & Conditions        & Ref. \\
+            \midrule
+            Gold     &$ z^{2^i+1}$                     & $ \gcd(i,n)=1$    &  \cite{Gold1968goldfunction_APN_sequences} \\
+            Kasami   &$ z^{2^{2i}-2^i+1}$              & $ \gcd(i,n)=1$    &  \cite{Kasami1971kasamifunction_APN_sequences} \\
+            Welch    &$ z^{2^t+3}$                     & $ n=2t+1$         &  \cite{Dobbertin1999Welchfunction_APN_sequences} \\
+            Niho-1   &$ z^{2^t+2^{t/2}-1}$             & $ n=2t+1, t$ even &  \cite{Dobbertin1999Nihofunction_APN_sequences} \\
+            Niho-2   &$ z^{2^t+2^{(3t+1)/2}-1}$        & $ n=2t+1, t$ odd  &  \cite{Dobbertin1999Nihofunction_APN_sequences} \\
+            Inverse  &$ z^{2^{2t}-1} $                 & $ n=2t+1$         &  \cite{Nyberg1993differential_and_inversefunction} \\
+            Dobbertin&$ z^{2^{4i}+2^{3i}+2^{2i}+2^i-1}$& $ n=5i$           & \cite{Dobbertin2001dobbbertinAPN} \\
+            \bottomrule
+        \end{tabular}
+    \end{table}
 
+    \begin{table}[!htbp]
+        \caption{All Known APN infinite families with univariate forms (non-monomials) over $\F_{2^n}$} \label{APN polynomials}
+        \centering
+        \small
+        \begin{tabular}{cccc}	
+            \toprule
+            No.&	Function  & Conditions & Ref. \\
+            \midrule
+            \begin{tabular}[c]{@{}l@{}} F1- F2\end{tabular} & $z^{2^s+1}+u^{2^k-1}z^{2^{ik}+2^{mk+s}}$ & \begin{tabular}[c]{@{}l@{}} $n=pk, \gcd(k,3)=\gcd(s,3k)=1,$\\ $p\in\{3,4\}, i=sk\pmod p, m=p-i,$\\ $n\ge 12$, $u$ primitive in $\F_{2^n}^*$\end{tabular} & \cite{Budaghyan2008twobinomialapn} \\
+            \hline
+            F3                                              & \begin{tabular}[c]{@{}l@{}} $sz^{q+1}+z^{2^i+1}+z^{q(2^i+1)}$\\ $+cz^{2^iq+1}+c^qz^{2^i+q}$\end{tabular} & \begin{tabular}[c]{@{}l@{}} $q=2^m$, $n=2m$, $\gcd(i,m)=1,$\\ $c\in\F_{2^n}, s\in\F_{2^n}\setminus\F_q, z^{2^i+1}+cz^{2^i}+$\\ $c^qz+1$ has no solution $z$ with $z^{q+1}=1$\end{tabular}  & \cite{BudaghyanC2008tri_hexanomialAPN}  \\ 
+            \hline  \specialrule{0em}{1pt}{1pt}
+            F4& $z^3+a^{-1}\operatorname{Tr}_1^n(a^3z^9)$  & $a\ne 0$ & \cite{BudaghyanCL2009newAPN_fromknownone} \\
+            \hline \specialrule{0em}{1pt}{1pt}
+            F5&  $z^3+a^{-1}\operatorname{Tr}_1^n(a^3z^9+a^6z^{18})$& $3 \mid n, a\ne 0$&  \cite{BudaghyanCL2009newquadAPN} \\
+            \hline \specialrule{0em}{1pt}{1pt}
+            F6& $z^3+a^{-1}\operatorname{Tr}_1^n(a^6z^{18}+a^{12}z^{36})$ & $3 \mid n, a\ne 0 $ &  \cite{BudaghyanCL2009newquadAPN} \\
+            \hline
+            \begin{tabular}[c]{@{}l@{}}F7-F9\end{tabular}   & \begin{tabular}[c]{@{}l@{}} $uz^{2^s+1}+u^{2^m}z^{2^{-m}+2^{m+s}}+$\\ $vz^{2^{-m}+1}+wu^{2^m+1}z^{2^s+2^{m+s}}$\end{tabular} & \begin{tabular}[c]{@{}l@{}} $n=3m, \gcd(m,3)=\gcd(s,3m)=1, v,w\in\F_{2^m}$ \\ $vw\neq1, 3 \mid {m+s}, u$ primitive in $\F_{2^n}^{*}$ \end{tabular}               &  \cite{BrackenBMM2011quadAPN} \\
+            \hline
+            F10 & \begin{tabular}[c]{@{}l@{}} $a^2z^{2^{2m+1}+1}+b^2z^{2^{m+1}+1}+$ \\ $az^{2^{2m}+2}+bz^{2^m+2}+(c^2+c)z^3$ \end{tabular} & \begin{tabular}[c]{@{}l@{}} $n=3m, m$ odd, $L(z)=az^{2^{2m}}+bz^{2^m}+cz$\\ satisfies the conditions of Theorem 2 \end{tabular}                   & \cite{BudaghyanCCCV2020APN_isotopicshifts}  \\
+            \hline
+            F11 & \begin{tabular}[c]{@{}l@{}} $z^3+wz^{2^{i+1}}+w^2z^{3\cdot 2^m}$\\ $+z^{2^{i+m}+2^m}$ \end{tabular}  & \begin{tabular}[c]{@{}l@{}} $n=2m, m$ odd, $3\nmid m$, $w$ primitive  \\ in $\F_{2^2}, s = m-2, (m-2)^{-1} \pmod n$ \end{tabular}        &  \cite{BudaghyanHK2020quadrinomialAPN}\\
+            \hline
+            F12 & \begin{tabular}[c]{@{}l@{}} $a\operatorname{Tr}_1^n(bz^3)+a^q\operatorname{Tr}_1^n(b^3z^9)$\\ \end{tabular}   & \begin{tabular}[c]{@{}l@{}}$n=2m, m $ odd, $q=2^m$, $a\notin \F_q,$\\ $b$ not a cube\end{tabular}                   & \cite{Zheng2022newAPN_trace} \\
+            \hline
+            F13 & $ L(z)^{2^m+1} + vz^{2^m+1} $ & \begin{tabular}[c]{@{}l@{}} $ \gcd(s,m) = 1,v\in\F_{2^m}^*,\mu\in\F_{2^{3m}}^* $ \\ $ L(z)=z^{2^{m+s}} + µz^{2^s} + z $ permutes $ \F_{2^{3m}} $ \end{tabular} & \cite{LiZLQ2022quadraticAPN}\\
+            \bottomrule
+        \end{tabular}
+    \end{table}
+    %     \caption{All known APN families with bivariate forms over $\F_{2^m}^2$} \label{APN bivariate}
+    %     \centering
+    %     \small
+    
+    \begin{sidewaystable}
+        \caption{\label{demo-table}Your caption.}
+        \begin{tabular}{cccc}	
+            \toprule
+            No. &	Function  & Conditions & Ref. \\
+            \midrule
+            F14 & $(xy, x^{2^k+1} + \alpha x^{(2^k+1)2^i})$ & $\gcd(k,m)=1$, $m$ even, $\alpha$ non-cubic &  \cite{ZhouP2012semifieldsAPN} \\
+            \hline
+            F15 & $(xy, x^{2^{3k}+2^{2k}}+ax^{2^{2k}}y^{2^k}+by^{2^k+1})$ & $\gcd(k,m)=1$, $P_1$ no root in $\F_{2^{m}}$ &  \cite{Taniguchi2019quadraticAPN} \\
+            \hline
+            F16 & $(xy, x^{2^i+1}+x^{2^{i+m/2}}y^{2^{m/2}}+bxy^{2^i}+cy^{2^i+1})$ & $m$ even, $\gcd(i,m)=1$, $P_2$ no root in $\F_{2^{m}}$ &  \cite{CalderiniBC2020APN_ABfunction} \\
+            \hline
+            F17 & $(x^{2^i+1}+xy^{2^i}+y^{2^i+1}, x^{2^{2i}+1}+x^{2^{2i}}y+y^{2^{2i}+1})$ & $\gcd(3i,m)=1$ &\cite{Gologlu2020APN_biprojective}\\
+            \hline
+            F18 & $(x^{2^i+1}+xy^{2^i}+y^{2^i+1}, x^{2^{3i}}y+xy^{2^{3i}})$ & $\gcd(3i,m)=1$, $m$ odd & \cite{Gologlu2020APN_biprojective} \\
+            \hline
+            F19 & $(x^3+xy^2+y^3+xy, x^5+x^4y+y^5+xy+x^2y^2)$ & $\gcd(3,m)=1$ & \cite{LiZLQ2022quadraticAPN} \\
+            \hline
+            F20 & $(x^{q+1}+By^{q+1},x^ry+\frac{a}{B}xy^r)$ & \begin{tabular}[c]{@{}l@{}}$0<k<m,q=2^k,r=2^{k+m/2},$\\$m\equiv 2\pmod{4},\gcd(k,m)=1,a\in\F_{2^{m/2}}^*$\\$,B\in\F_{2^m}, B $ note a cube, $ B^{q+r}\ne a^{q+1} $ \end{tabular} & \cite{GolougluK2021biprojectiveAPN} \\
+            \hline
+            F21 & \begin{tabular}[c]{@{}l@{}} $(x^{q+1}+xy^q+\alpha y^{q+1},$ \\\quad $ x^{q^2+1}+\alpha x^{q^2}y+(1+\alpha)^qxy^{q^2}+\alpha y^{q^2+1})$ \end{tabular}& \begin{tabular}[c]{@{}l@{}} $k,m>0,\gcd(k,m=1),q=2^k,$\\$\alpha\in\F_{2^m},x^{q+1}+x+\alpha $ has no roots in $ \F_{2^m}$  \end{tabular} & \cite{CalderiniLV2022twobivariateAPN} \\
+            \hline
+            F22 & \begin{tabular}[c]{@{}l@{}} $(x^3+xy+xy^2+\alpha y^3,$\\$x^5+xy+\alpha x^2y^2+\alpha x^4y+(1+\alpha)^2xy^4+\alpha y^5)$\end{tabular} & $\alpha\in\F_{2^m},x^3+x+\alpha$ has no roots in $ \F_{2^m} $ & \cite{CalderiniLV2022twobivariateAPN} \\
+            \bottomrule
+        \end{tabular}
+    \end{sidewaystable}
+    % \end{table}
 
-\bibliographystyle{plain}
+    In \cite{Beierle2022search_quadAPN}, compared to the $ 8192 $ previously-known APN instances, 
+    authors found $ 12733 $ new CCZ-inequivalent quadratic APN functions in dimension $ n=8 $.
+    They also presented $ 35 $ and $ 5 $ new APN instances in dimension $ n=9 $ and $ n=10 $, respectively.
+    Remarkably, two new $ 9 $-bit APN permutations are given in univariate representation over $ \F_{2^9} $ by 
+    \begin{align*}
+        x&\mapsto x^3+ux^{10}+u^2x^{17}+u^4x^{80}+u^5x^{192},\\
+        x&\mapsto x^3+u^2x^{10}+ux^{24}+u^4x^{80}+u^5x^{136},
+    \end{align*}
+    where $ u\in\F_{2^9}^* $ is an element with minimal Ploynoimal $ X^3+X+1\in\F_2[X] $. 
+    \begin{remark}
+        Fortunately, Kangquan Li and Nikolay Kaleyski in \cite{Li2022trivariateAPN} 
+        have generalized above two new $ 9 $-bit APN permutations into two infinite families:
+        
+        Assume $ \gcd(i,m)=1 $ and $ q=2^i $, for $ (x,y,z)\in\F_{2^m}^3 $, we have 
+        \begin{align*}
+            F(x, y, z) =(x^{q+1} + x^qz + yz^q, x^qz + y^{q+1}, xy^q + y^qz + z^{q+1}),\\
+            F(x, y, z) =(x^{q+1} + xy^q + yz^q, xy^q + z^{q+1}, x^qz + y^{q+1} + y^qz)
+        \end{align*}
+        are two APN over $ \F_{2^m}^3 $ with some complex restriction. They are semi-bent functions.
+    \end{remark}
+    Yuyin Yu and Léo Perrin in \cite{Yu2022search_quadAPN} present another $ 5412 $ new quadratic APN functions. 
+    Thus, the number of CCZ-inequivalent quadratic APN functions in dimension $ 8 $ increases to $ 26525 $ (up to April 30, 2021).
+    
+    \begin{enumerate}
+        \item $ x^3+\omega x^{36} $, $ \omega\in \{u\F_{2^5}^*\}\cup\{u^2\F_{2^5}^*\} $ where $ u\in\F_{2^5}^* $ of order $ 3 $ in theorem 2 of \cite{edel2006newapn}
+        \item Let $s$ and $k$ be positive integers with $\gcd(s, 3k) = 1$ and let $t \in\{1, 2\}$, $i = 3 - t$. Let further $a = 2s + 1$ and $b = 2^{ik} + 2^{tk+s}$ and let $\omega = \alpha^{2k}-1$ for a primitive element $\alpha \in\F_{2^{3k}}^* $. If $\gcd(2^{3k}-1, (b-a)/(2^k-1)) \ne \gcd(2^k-1, (b-a)/(2^k-1))$,
+        the function $F : \F_{2^{3k}}\rightarrow \F_{2^{3k}}, x \mapsto x^a + \omega x^b$ is APN in theorem 1 of 
+        \cite{Budaghyan2008twobinomialapn}.
+        \item Let $s$ and $k$ be positive integers such that $s \leq 4 k-1$, $\gcd(k, 2)=\gcd(s, 2 k)=1$, and $i=s k \bmod 4, t=4-i$. Let further $a=2^{s}+1$ and $b=2^{i k}+2^{t k+s}$ and let $\omega=$ $\alpha^{2^{k}-1}$ for a primitive element $\alpha \in \mathbb{F}_{2^{4 k}}^{*}$. Then, the function $F: \mathbb{F}_{2^{4 k}} \rightarrow \mathbb{F}_{2^{4 k}}, x \mapsto x^{a}+\omega x^{b}$ is APN in theorem 2 of 
+        \cite{Budaghyan2008twobinomialapn}.
+        \item Let $k$ and $s$ be odd integers with $\gcd(k, s) = 1$. Let $ b\in\F_{2^{2k}} $ which is not a cube, 
+        $ c\in\F_{2^{2k}}\setminus\F_{2^k} $ and $ r_i\in\F_{2^k} $ for all $ i\in\{1,...,k-1\} $, then the function
+        $ F:\F_{2^{2k}}\rightarrow\F_{2^{2k}},x\mapsto bx^{2^s+1}+b^{2^k}x^{2^{k+s}+x^k+cx^{2^k+1}+\sum_{i=1}^{k-1}r_ix^{2^{i+k}+2^i}} $ is APN in Theorem 1 of \cite{Bracken2008apn}
+        \item Let $k$ and $s$ be positive integers such that $k+s=0 \bmod 3$ and $\gcd(s, 3 k)=\gcd(3, k)=1$. Let further $u \in \mathbb{F}_{2^{3 k}}^{*}$ be primitive and let $v, w \in \mathbb{F}_{2^{k}}$ with $v w \neq 1$. Then, the function
+        $$
+        \begin{aligned}
+        &F: \mathbb{F}_{2^{3 k}} \rightarrow \mathbb{F}_{2^{3 k}} \\
+        &x \mapsto u x^{2^{s}+1}+u^{2^{k}} x^{2^{2 k}+2^{k+s}}+v x^{2^{2 k}+1}+w u^{2^{k}+1} x^{2^{k+s}+2^{s}}
+        \end{aligned}
+        $$
+        is APN in Theorem 2.1 of \cite{bracken2011afewapn}
+        \item 
+    \end{enumerate}
+
+\section{Decomposition of $ \F_{2^{2m}} $} 
+    The field extension $ \F_{2^{2m}} $ over $ \F_{2^m} $ has similarities with the extension $ \Com $ over $ \R $.
+    The unit circle of $ \F_{2^{2m}} $ is the set 
+    \[U=\left\{ u\in\F_{2^{2m}}:u^{2^m+1}=1 \right\}\]
+    of all elements with norm $ 1 $.
+    Note that $ U\cap\F_{2^m}=\left\{ 1 \right\} $.
+    \begin{remark}
+        The range set of $ c=u+u^{2^m} $ for $ u\in U\setminus\left\{ 1 \right\} $ can be characterized. Define
+        \[\mathcal{H}_1=\left\{ x\in\F_{2^m}:\tr(\frac{1}{x})=1 \right\}.\]
+        Then we have 
+        \[\mathcal{H}_1=\left\{ u+u^{2^m}:u\in U\setminus\left\{ 1 \right\} \right\}.\]
+        More precisely, the mapping $ u\rightarrow\tr(u) $ from $ U\setminus\left\{ 1 \right\} $ to $ \mathcal{H}_1 $ 
+        is onto, and $ \tr(u)=\tr(v) $ iff $ u=v $ or $ u=v^{2^m} $ for $ u,v\in U\setminus\left\{ 1 \right\} $. 
+    \end{remark}
+    Denote $ \mathcal{T}_1=\left\{ x\in\F_{2^{2m}}\mid \operatorname{tr}_m^{2m}(x)=x^{2^m}+x=1 \right\} $. 
+    We have, for $ g\in\mathcal{T}_1 $, $ g+g^2\in\F_{2^m} $ and $ \operatorname{tr}_1^m(g+g^2)=1 $, 
+    since $ (g+g^2)^{2^m}=g^{2^m}(g+1)^{2^m}=(g+1)g=g+g^2 $ and $ \operatorname{tr}_1^m(g+g^2)=g+g^{2^m}=1 $.
+
+    We can decompose the finite field $ \F_{2^{2m}} $ as follows:
+    \begin{enumerate}[label=(\arabic{*})]
+        \item $ \F_{2^{2m}}=\F_{2^m}\times\F_{2^m} $, the simplest form.
+        \item Polar-Coordinate Decomposition: $ \F_{2^{2m}}=\F_{2^m}\times U $, 
+        where $ U=\left\{ x^{2^m-1}\mid x\in\F_{2^{2m}}\right\} $ 
+        or $ U=\left\{ x\in\F_{2^{2m}}\mid x^{2^m+1}=1 \right\} $: 
+        since $ 2^{2m}-1=(2^m-1)(2^m+1) $ and $ \gcd(2^m-1,2^m+1)=1 $, 
+        we decompose $ x\in\F_{2^{2m}} $ into the multiplication of two elements $ \lambda\in\F_{2^m},\varepsilon\in U $ 
+        with $ \ord(\lambda)\mid 2^m-1 $ and $ \ord(\varepsilon)\mid 2^m+1 $, respectively. 
+        This decomposition is frequently used in the proof of properties of Niho type exponents, 
+        since Niho type exponents $ \operatorname{tr}_1^{2m}(x^d) $ are defined to be linear in $ \F_{2^m} $, 
+        which means $ d\equiv (2^m-1)s+2^i\pmod{2^{2m}-1} $, and we always assume $ i=0 $. 
+        \item Trace-$ 0 $/Trace-$ 1 $ Decomposition: $ \F_{2^{2m}}=\F_{2^m}\times\mathcal{T} $, 
+        where Trace-$ 0 $ is $ \F_{2^m} $ due to $ \operatorname{tr}_m^{2m}(x)=0 $ for all $ x\in\F_{2^m} $ and 
+        Trace-$ 1 $ means $ \mathcal{T}=\mathcal{T}_1\cup\left\{ 1 \right\} $ in \cite{gologlu2019proofconjecture}. 
+        If $ X\in\F_{2^{2m}}^* $ has two decomposition $ xg,yh $, where $ x,y\in\F_{2^m}^* $ and $ g,h\in\mathcal{T} $, 
+        then $ \operatorname{tr}_m^{2m}(xg)=\operatorname{tr}_m^{2m}(yh) $. And $ \operatorname{tr}_m^{2m}(xg)=0 $ means $ g=h=1 $, implying $ x=y $, while $ \operatorname{tr}_m^{2m}(xg)\ne 0 $ means $ x=y $, implying $ h=g $. 
+    \end{enumerate} 
+    Also in \cite{gologlu2019proofconjecture},  with the help of Trace-$ 0 $/Trace-$ 1 $ Decomposition, 
+    we can derive a decomposition for Trace-$ 0 $ hyperplane $ \mathcal{H}_0 $ of $ \F_{2^{2m}} $: 
+    $ \mathcal{H}_0=\left\{ xg:x\in\mathcal{H}_0^{\F_{2^m}},g\in\mathcal{T} \right\}\cup\F_{2^m} $, 
+    where $ \mathcal{H}_0^{\F_{2^m}} $ is the Trace-$ 0 $ hyperplane of $ \F_{2^m} $. 
+    The idea is natural, that is, the Trace-$ 0 $ hyperplane of $ \F_{2^{2m}} $ must contain $ \F_{2^m} $, 
+    besides, others must satisfy $ \operatorname{tr}_1^m(x)=0 $ with $ x=\operatorname{tr}_m^{2m}(y)=y+y^{2^m}\in\F_{2^m}^* $. 
+    Note that $ y\in\F_{2^{2m}} $ can be decomposed by Trace-$ 0 $/Trace-$ 1 $ Decomposition, then $ y=xg $,  
+    where $ g\in\mathcal{T} $, can hold this property.
+
+\section{Nonlinearity}
+
+    In \cite{dobbertin2006niho_dickson_kloosterman}, Dobbertin et al. studied the cross-correlation function between two 
+    $ m $-sequences for Niho type decimation $ d=(2^k-1)s+1 $. 
+    They derived the distribution of six-valued cross-correlation function for $ s=3 $ and odd $ k $. 
+
+    Carlet\cite{Carlet2008lowbound_NL_profile} gives two lower bounds for the nonlinearity profile of a Boolean function 
+    by the nonlinearity profiles of its derivatives: 
+    \begin{theorem}\label{TH:NL_onederivate}
+        Let $f$ be any $ n $-variable function and $ r $ a positive integer smaller than $ n $. We have:
+        \[nl_r(f)\ge\frac{1}{2}\max_{a\in\F_{2^n}nl_{r-1}(D_af)}.\]
+        Obviously, above inequality can be repeatedly applied: 
+        \[nl_r(f)\ge \frac{1}{2^i}\max_{a_1,\dots,a_i\in\F_{2^n}}nl_{r-i}(D_{a_1}\cdots D_{a_i}f).\]
+    \end{theorem}
+    Another potentially stronger lower bound, given a lower bound on the $ (r-1) $-th order nonlinearity is 
+    known for all the derivatives (in nonzero directions) of the function:
+    \begin{theorem}\label{TH:NL_allderivates}
+        Let $f$ be any $ n $-variable function and $ r $ a positive integer smaller than $ n $. We have:
+        \[nl_r(f) \ge 2^{n-1} -\frac{1}{2}\sqrt{2^{2n}-2\sum_{a\in\F_{2^n}}nl_{r-1}(D_af)}.\]
+    \end{theorem}
+    \begin{remark}
+        It's not clear whether Theorem \ref{TH:NL_allderivates} is always better than theorem \ref{TH:NL_onederivate}.
+    \end{remark}
+
+\section{APN decomposition}
+    The decomposition \cite{BeierleCLP2022ninebitAPNpermutation_error} we introduced 
+    is based on the TU-decomposition, before investigating this pattern, we first need the notion of Walsh zeros.
+    \textbf{definition}
+        Let $ \mathcal{V} $ and $ \mathcal{W} $  be finite-dimensional $\F_2 $-vector spaces. 
+        The Walsh zeroes of a function $ F : \mathcal{V}\rightarrow \mathcal{W} $, denoted by $ \mathcal{Z}_F $, 
+        is the set of the coordinates of the zeroes in its Walsh spectrum together with $ (0, 0) $, i.e. 
+        \[\mathcal{Z}_F=\left\{ (a,b)\in\mathcal{V}\times\mathcal{W}\mid W_F(a,b)=0 \right\}\cup\left\{ (0,0) \right\}.\]
+    Note that Walsh zeros of a vectorial Boolean function must contain $ \left\{ (0,x):x\in\mathcal{W} \right\} $.
+
+    \bibliographystyle{plain}
 \bibliography{ref.bib}
 \end{document}
-
-
-{ 
-\newcommand{\ftcmu}{\fontspec{CMU Serif}
-\selectfont} \renewcommand{\bibfont}{\ftcmu}%设置英文字体不影响中文字体 
-\printbibliography[heading=bibliography,title=参考文献]
-}
